<resources>
    <string name="app_name">My Android Application</string>
    <string name="add_student">Add Student</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_web_client_id">1027110826000-i30i46qeco68g929tcmq9iqigfq9m2q1.apps.googleusercontent.com</string>
    <string name="profile_image">Profile Image</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="enter_name">Enter Name</string>
    <string name="save_profile">Save Profile</string>
    <string name="username_placeholder">Username</string>
    <string name="edit_profile">Edit Profile</string>
        <string name="description_gif">Selected GIF</string>
        <string name="select_gif">Select GIF</string>
        <string name="post_content_hint">Enter post content here...</string>
        <string name="create_post">Create Post</string>
    <string name="select_image">select image</string>
    <string name="description_media">Media preview</string>
    <string name="search_gifs_hint">Search GIFs</string>
    <string name="save">save</string>
    <string name="cancel">cancel\n</string>
    <string name="post_image">post image</string>
</resources>

