<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePostFragment">

    <!-- ImageView to display the selected GIF or image -->
    <ImageView
        android:id="@+id/imageViewPost"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/description_media"
        app:layout_constraintBottom_toTopOf="@+id/buttonSelectImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerInside" />

    <!-- Button to select a GIF -->

    <!-- Button to select an image -->

    <!-- EditText for post content -->

    <Button
        android:id="@+id/buttonSelectGif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_gif"
        app:layout_constraintBottom_toTopOf="@+id/editTextPostContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPost"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/buttonSelectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        app:layout_constraintBottom_toTopOf="@+id/editTextPostContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPost" />

    <EditText
        android:id="@+id/editTextPostContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/post_content_hint"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreatePost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectImage" />

    <!-- Button to create/upload the post -->
    <Button
        android:id="@+id/buttonCreatePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPostContent" />

</androidx.constraintlayout.widget.ConstraintLayout>
